1999-05-20  Angela Marie Thomas <angela@cygnus.com>

	* configure.in: Test for ${compiler_name}.exe as well.

1999-05-15  Mark Kettenis  <kettenis@gnu.org>

	* configure.in: Add shared library support for the Hurd
	(*-*-gnu*).
	* config/gnu.ml: New file.

1999-05-12  Jason Merrill  <jason@yorick.cygnus.com>

	* configure.in (compiler_name): Don't do the skip-this-dir thing
	if we're reconfiguring.

1999-05-07  Ulrich Drepper  <drepper@cygnus.com>

	* std/bastring.h (class basic_string::Rep): Make release member
	function thread-safe for ix86 (x>=4) and UltraSPARC.

	* stlinst.cc: Make it possible to compile with __USE_MALLOC.

Mon Apr 26 02:24:47 1999 "Loren J. Rittle" <rittle@supra.rsch.comm.mot.com>

	* config/freebsd.ml (LIBS): Add ARLINK.
	* config/openbsd.ml (LIBS): Add ARLINK.

Fri Apr  2 15:12:14 1999  H.J. Lu  (hjl@gnu.org)

	* libstdc++/configure.in (gxx_include_dir): Handle it.
	* libstdc++/Makefile.in: Likewise.

Wed Mar 24 22:36:45 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* configure.in (EXEEXT): Define.
	(compiler_name): Use.

Thu Mar 11 01:07:55 1999  Franz Sirl <Franz.Sirl-kernel@lauterbach.com>

	* configure.in: Add mh-*pic handling for alpha, arm, powerpc

Fri Mar  5 02:16:39 1999  Doug Rabson  <dfr@freebsd.org>

	* configure.in: Support shared libs on FreeBSD 3.x and 4.x
	* config/freebsd.ml: A copy of config/linux.ml since they are both
	ELF and both have a shared libm.

1999-02-24  Jason Merrill  <jason@yorick.cygnus.com>

	* configure.in: Fix INSTALLDIR sed pattern for Solaris sed.

Sat Feb 20 13:17:17 1999  Jeffrey A Law  (law@cygnus.com)

	* string, std/straits.h, std/bastring.h: Revert recent change.  Needs
	some libiberty support before it can be re-enabled.

Thu Feb 18 19:53:17 1999  Marc Espie <espie@cvs.openbsd.org>

	* configure.in: Handle OpenBSD with and without threads.
	* config/openbsd.ml: New file.
	* config/openbsd.mt: New file.

1999-02-04  Ulrich Drepper  <drepper@cygnus.com>
